feat(kude): implementar soporte para Notas de Remisión en plantillas A4 y Ticket
Enriquece KudeGenerator.java para inyectar dinámicamente todos los parámetros estructurados de traslado, conductor, vehículo, locales y unidad de medida.

Rediseña kude_a4.jrxml para alternar automáticamente entre Facturas y Notas de Remisión Electrónicas (tipo 7) mediante el parámetro P_ES_REMISION y corrige typo tipográfico de printWhenExpression.

Adapta kude_ticket.jrxml para imprimir secuencial y limpiamente los datos de transporte en tickets térmicos de 80mm.

Oculta dinámicamente bloques de totales y liquidación de IVA en ambos formatos de KuDE al procesar Notas de Remisión de acuerdo a la normativa SIFEN v150.